# git-github-guide

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  LICENSE-CC-BY-4.0  README.md  pyproject.toml
book/: _quarto.yml  cheatsheet.qmd  checklist.qmd  index.qmd
book/chapters/: 01-reproducibility.qmd  02-why-git.qmd  03-mental-model.qmd  04-install-setup.qmd  05-git-beginners.qmd  06-never-commit.qmd  07-git-advanced.qmd  08-data-environments.qmd  09-git-to-github.qmd  10-github-beginners.qmd  11-github-advanced.qmd  12-collaboration.qmd  13-worktrees-submodules.qmd  14-toolchain.qmd  16-ai-age.qmd  (+2 more)
sandbox/: minwage-did.bundle
sandbox/minwage-did/: .gitignore  README.md  pyproject.toml  report.qmd
sandbox/minwage-did/output/tables/: did_main.txt
sandbox/minwage-did/scripts/: 00_make_data.py  01_clean.py  02_analysis.py
tools/: validate_book.py
transcripts/: 01_ch1_log_stat.txt  01_initial_history.txt  02_log.txt  02_log_status_clean.txt  03_branch_head.txt  03_catfile_commit.txt  03_catfile_tree.txt  03_edit_diff.txt  03_log_graph.txt  04_add_commit.txt  04_config_list.txt  04_defaultbranch.txt  04_defaults.txt  04_identity.txt  04_macos_setup.txt  04_sshkeygen.txt  04_version.txt  05_add_commit.txt  05_diffstaged.txt  05_edit_diff.txt  05_gitignore.txt  05_log.txt  05_reflog_rescue.txt  05_restore.txt  05_revert.txt  05_unstage.txt  06_after_rescue.txt  06_filterrepo_rescue.txt  06_leak.txt  06_rm_cached.txt  07_bisect.txt  07_branch_merge.txt  07_cherry_pick.txt  07_merge_conflict.txt  07_rebase.txt  07_rebase_rescue.txt  07_stash.txt  07_tags.txt  08_bundle_regen.txt  08_commit_env.txt  (+48 more)
verification/: 2026-06-21-ch1-sources.md  2026-06-21-ch8-sources.md  2026-06-21-pinned-sources.md  2026-06-22-ch4-sources.md  2026-06-22-ch9-14-github-sources.md  2026-06-23-ch15-replication-sources.md
(+2 files in other folders)
