# Reproducible environment for the running example:
# "Minimum Wage and Teen Employment: A DiD Example".
#
# Rebuild the whole project from code with:
#
#     uv run python scripts/00_make_data.py
#     uv run python scripts/01_clean.py
#     uv run python scripts/02_analysis.py
#
# uv constructs the locked environment from uv.lock on first run.
# All data are simulated by 00_make_data.py (seeded), so the project
# reproduces from code alone. Expected result is pinned in README.md.

[project]
name = "minwage-did"
version = "0.1.0"
description = "Simulated minimum-wage difference-in-differences example."
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "pyfixest>=0.25",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
